traceback.txt
I'm sorry, but an uncaught exception occurred.

After initialization, but before game start.
  File "game/screens.rpy", line 3608, in analyze_screen
    screen online_shop():
  File "game/screens.rpy", line 3608, in analyze
    screen online_shop():
  File "game/screens.rpy", line 3608, in analyze
    screen online_shop():
  File "game/screens.rpy", line 3609, in analyze
    frame:
  File "game/screens.rpy", line 3609, in analyze
    frame:
  File "game/screens.rpy", line 3630, in analyze
    vbox:
  File "game/screens.rpy", line 3630, in analyze
    vbox:
  File "game/screens.rpy", line 3634, in analyze
    for rarity, equipments in online_shop_variable.selling_equipments_list.items():
  File "game/screens.rpy", line 3634, in analyze
    for rarity, equipments in online_shop_variable.selling_equipments_list.items():
  File "game/screens.rpy", line 3635, in analyze
    for equipment in equipments if equipment.rarity == rarity :
  File "game/screens.rpy", line 3635
    equipments if equipment.rarity == rarity
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expected 'else' after 'if' expression

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "renpy/bootstrap.py", line 376, in bootstrap
    renpy.main.main()
    ~~~~~~~~~~~~~~~^^
  File "renpy/main.py", line 614, in main
    run(restart)
    ~~~^^^^^^^^^
  File "renpy/main.py", line 78, in run
    renpy.display.screen.analyze_screens()
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
  File "renpy/display/screen.py", line 1006, in analyze_screens
    s.ast.analyze_screen()
    ~~~~~~~~~~~~~~~~~~~~^^
  File "game/screens.rpy", line 3608, in analyze_screen
    screen online_shop():
  File "game/screens.rpy", line 3608, in analyze
    screen online_shop():
  File "game/screens.rpy", line 3608, in analyze
    screen online_shop():
  File "game/screens.rpy", line 3609, in analyze
    frame:
  File "game/screens.rpy", line 3609, in analyze
    frame:
  File "game/screens.rpy", line 3630, in analyze
    vbox:
  File "game/screens.rpy", line 3630, in analyze
    vbox:
  File "game/screens.rpy", line 3634, in analyze
    for rarity, equipments in online_shop_variable.selling_equipments_list.items():
  File "game/screens.rpy", line 3634, in analyze
    for rarity, equipments in online_shop_variable.selling_equipments_list.items():
  File "game/screens.rpy", line 3635, in analyze
    for equipment in equipments if equipment.rarity == rarity :
  File "renpy/pyanalysis.py", line 674, in is_constant_expr
    node, literal = ccache.ast_eval_literal(expr)
                    ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "renpy/pyanalysis.py", line 895, in ast_eval_literal
    expr = py_compile(expr, "eval", ast_node=True)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1247, in py_compile
    raise e
  File "renpy/python.py", line 1177, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/screens.rpy", line 3635
    equipments if equipment.rarity == rarity
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expected 'else' after 'if' expression

Windows-11-10.0.26120-SP0 AMD64
Ren'Py 8.4.1.25072401
Protectors 1.0
Fri Sep  5 12:22:30 2025
